--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,13 @@ img.fruit{
   clear:both;
   margin: 1px;
 }
+
+footer{
+  position: fixed;
+  bottom: 0px;
+  width: 100vw;
+  height: 20px;
+  background-color: #333;
+  color: white;
+
+}
